# android_threads

./: .gitignore  README.md
app_project/: settings.gradle
app_project/app/: build.gradle
app_project/app/src/androidTest/java/com/example/jnitestapplication/: ExampleInstrumentedTest.java
app_project/app/src/main/: AndroidManifest.xml
app_project/app/src/main/java/com/example/jnitestapplication/: JavaInterface.java  JniInterface.java  MainActivity.java
app_project/app/src/main/java/com/example/myapplication/: BleInterface.java  JavaInterface.java  JniInterface.java  MainActivity.java
app_project/app/src/main/res/values/: strings.xml  themes.xml
app_project/app/src/main/res/values-night/: themes.xml
app_project/gradle/wrapper/: gradle-wrapper.properties
jni_test_rust_lib/: Cargo.toml
jni_test_rust_lib/src/: lib.rs  robusta_java_itf.rs
rust_lib/: Cargo.toml
rust_lib/src/: lib.rs  robusta_ble_itf.rs  robusta_java_itf.rs
