[package]
name = "jni_test_rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "jni_test_rust_lib"
crate-type = ["lib", "cdylib"]

[dependencies]
android_logger = "0.11.1"
log = "0.4.17"
jni = "0.19.0"
once_cell = "^1"
robusta_jni = { version = "0.2.0", optional = true }

[features]
with_robusta = ["robusta_jni"]

[patch.crates-io]
robusta_jni = { git = "https://github.com/EliseChouleur/robusta.git", branch = "master" }
